# docs/swagger.json
@@ -812,6 +812,12 @@
                             "type": "object"
                         }
                     },
+                    "401": {
+                        "description": "error: неверный логин или пароль",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
                     "500": {
                         "description": "error: message",
                         "schema": {
@@ -1041,9 +1047,6 @@
                 "draft": {
                     "type": "number"
                 },
-                "isActive": {
-                    "type": "boolean"
-                },
                 "length": {
                     "type": "number"
                 },
@@ -1096,13 +1099,14 @@
                 "fio": {
                     "type": "string"
                 },
-                "isModerator": {
-                    "type": "boolean"
-                },
                 "login": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "description": "\"guest\" | \"creator\" | \"moderator\"",
                     "type": "string"
                 },
                 "userID": {
